# neural_nets

./: Cargo.toml  README.md  training_results  training_results.json  training_results.ron  training_results.toml
src/: activation_functions.rs  autodiff.rs  input_neuron.rs  layer.rs  lib.rs  main.rs  network.rs  network_builder.rs  neuron.rs  reverse.rs  rng.rs  running.rs  save_information.rs  tests.rs  training.rs  weight.rs
src/autodiff/: grad.rs  grad_num.rs  node.rs  real.rs  tape.rs  var.rs
src/autodiff/real/: f32.rs  f64.rs  operations.rs  real_math.rs
src/network/: activation_fn.rs  layer.rs  layout.rs  network_builder.rs  network_data.rs  param_helper.rs  params.rs  run_results.rs  run_settings.rs  running.rs
src/training/: clamp_settings.rs  cost.rs  data_set.rs  eta.rs  trainer.rs  training_results.rs  training_settings.rs
