[package]
name = "neural_nets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bitcode = "=0.6.3"
serde_json = "1.0"
ron = "0.8"
toml = "0.8.19"

[lib]
doctest = false